--- a/examples/src/dune
+++ b/examples/src/dune
@@ -1,7 +1,4 @@
-(library
- (name console))
-
-(rule
- (target Console.v)
- (action
-  (run coqffi -finterface -ftransparent-types %{cmi:console} -o %{target})))
+(coq.theory
+ (name FreeSpec.Example.Guess)
+ (theories FreeSpec.Example.ffi)
+ (flags -init-file build.v))
